# BusyAcceptableBytes

./: mainroutes.py  program.py  pyproject.toml
static/css/: homepage.css  showlist.css
templates/: home.html  showlists.html
