[tool.poetry]
name = "repl_python3_BusyAcceptableBytes"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.4"
SQLAlchemy = "^1.3.20"
PyMySQL = "^0.10.1"
Flask-MySQL = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
